--- a/endeal.styl
+++ b/endeal.styl
@@ -1,1 +1,18 @@
-/* CSS declarations go here */
+body
+  display flex
+  min-height 100vh
+  flex-direction column
+
+main
+  flex 1 0 auto
+
+img
+    &.logo
+        min-height 56px
+        max-height 56px
+        margin-top 4px
+        margin-bottom 4px
+        margin-left 0px
+        margin-right 15px
+    &.screenshot
+        max-width 400px
