added meteor-up support for server deployment, updated images, product descriptions, jobs page

--- a/client/views/intro.html
+++ b/client/views/intro.html
@@ -19,7 +19,7 @@
             <li>
                 <img src="/images/intro-slider-3.jpg">
                 <div class="caption right-align">
-                    <h5 class="light grey-text text-darken-4">Sell stuff? Download Vendor!</h5>
+                    <h5 class="light grey-text text-lighten-4">Sell stuff? Download Vendor!</h5>
                 </div>
             </li>
         </ul>
