--- a/client/views/jobs.html
+++ b/client/views/jobs.html
@@ -1,5 +1,119 @@
 <template name="jobs">
     <div class="container">
+        <!--
         <p class="flow-text">There aren't currently any openings at Endeal, sorry. Check back soon for further opportunities.</p>
+        -->
+        <p class="flow-text">Every position at our company has the following benefits:</p>
+        <ul>
+            <li>&bull; Short-term and long-term disability insurance</li>
+            <li>&bull; Medical and dental insurance</li>
+            <li>&bull; 4 weeks of vacation time, 2 weeks sick time, national holidays off, December 24th through January 1st off.</li>
+            <li>&bull; Free special company events and festivities</li>
+        </ul>
+        <p class="flow-text">
+            To apply, send your resume/cover letter with the position(s) in the subject line to <a href="mailto:admin@endeal.me">admin@endeal.me</a>
+        </p>
+
+        <!-- Jobs postings -->
+        <ul class="collapsible popout" data-collapsible="accordion">
+            <li>
+                <div class="collapsible-header">Patron for Android Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                        Responsible for managing a team of developers 
+                        to create the app under specifications. Will be in charge of ticket management 
+                        and assignment, and getting his hands dirty where it needs to be done. Need 
+                        strong software architecture skills and teamwork skills primarily, also strong 
+                        knowledge of app development, preferably knows Android Studio, Gradle, Groovy, 
+                        Java. Will need Git, Vagrant knowledge eventually.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Patron for iOS Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                        Responsible for managing a team 
+                        of developers to create the app under specifications. Will be in charge of ticket 
+                        management and assignment, and getting his hands dirty where it needs to be done. 
+                        Need strong software architecture skills and teamwork skills primarily, also strong 
+                        knowledge of app development, preferably knows Android Studio, Gradle, Groovy, 
+                        Java. Will need Git, Vagrant knowledge eventually.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Vendor for iOS Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                    Responsible for managing a team of developers to create the app under specifications.
+                    Will be in charge of ticket management and assignment, and getting his hands dirty where
+                    it needs to be done. Need strong software architecture skills and teamwork skills
+                    primarily, also strong knowledge of app development, preferably knows XCode, Objective-C,
+                    Swift, Interface Builder. Will need Git, Vagrant knowledge eventually.nowledge eventually.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Emporium Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                    Responsible for managing a team of developers to create the app under specifications.
+                    Will be in charge of ticket management and assignment, and getting his hands dirty
+                    where it needs to be done. Need strong software architecture skills and teamwork 
+                    skills primarily, also strong knowledge of PHP, SQL, Coffeescript/Javascript optionally, 
+                    knowledge of database strength/weaknesses. Will need Git, Vagrant knowledge eventually.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Operations Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                    In charge of managing API deployments. Will be in charge of ensuring database integrity 
+                    and API security, as well as knowledge of AWS Elastic Beanstalk to ensure optimal 
+                    configurations are utilized. Will be in charge of scaling our server architecture, and 
+                    knowledge of cloud services in the vein of AWS would be preferred. Git, Vagrant needed 
+                    eventually.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Business Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                    In charge of inter-office administration needs. Includes payroll distribution, 
+                    employee requests/help, company phone-line management, company e-mail management, 
+                    employee entrance/exit management, bill and record-keeping, company bill-paying. 
+                    Knowledge of basic phone, e-mail, Microsoft Word, Microsoft Outlook, 
+                    Microsoft OneDrive, paperwork, strong people skills needed. Will also need 
+                    strong researching skills.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Public Relations Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                    In charge of communication of company to others. Includes social network posts, 
+                    company statements, potentially interviews and Q&As, communications with small 
+                    businesses, non-technical support queries. Must have strong English skills and 
+                    people skills.
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="collapsible-header">Graphics Leader</div>
+                <div class="collapsible-body">
+                    <p class="flow-text">
+                    Will be in charge of creating graphics using Inkscape/Adobe Illustrator or 
+                    other vector graphic software of choosing. Creativity and valuable input on the 
+                    look/feel of in-development software programs also needed. Must have strong people 
+                    skills, ability to communicate ideas well with others. Git and Vagrant knowledge 
+                    needed eventually.
+                    </p>
+                </div>
+            </li>
+        </ul>
     </div>
 </template>
