--- a/client/views/products.html
+++ b/client/views/products.html
@@ -8,7 +8,10 @@
                 <span class="card-title grey-text text-darken-4"><a href="/products/patron-for-android">Patron for Android</a></span>
             </div>
             <div class="card-action">
+                <!--
                 <a href="https://play.google.com/store/apps/details?id=me.endeal.patron">Download from Google Play</a>
+                -->
+                <a href="#">Not yet available</a>
             </div>
         </div>
         <div class="card large col s12 m4">
@@ -19,7 +22,7 @@
                 <span class="card-title grey-text text-darken-4"><a href="/products/patron-for-ios">Patron for iOS</a></span>
             </div>
             <div class="card-action">
-                <a href="https://play.google.com/store/apps/details?id=me.endeal.patron">Download from App Store</a>
+                <a href="#">Not yet available</a>
             </div>
         </div>
         <div class="card large col s12 m4">
@@ -30,7 +33,7 @@
                 <span class="card-title grey-text text-darken-4"><a href="/products/vendor-for-ios">Vendor for iOS</a></span>
             </div>
             <div class="card-action">
-                <a href="https://play.google.com/store/apps/details?id=me.endeal.patron">Download from App Store</a>
+                <a href="#">Not yet available</a>
             </div>
         </div>
     </div>
