--- a/client/views/vendor-for-ios.html
+++ b/client/views/vendor-for-ios.html
@@ -1,6 +1,7 @@
 <template name="vendor_for_ios">
     <div class="container">
         <h2>Vendor for iOS</h2>
+        <!--
         <div class="slider">
             <ul class="slides">
                 <li>
@@ -17,19 +18,35 @@
                 </li>
             </ul>
         </div>
+        -->
         <div class="section">
             <h5>Description</h5>
-            <p class="flow-text"> The buying and selling experience is currently spread across a variety of services, devices, and outdated technologies. We're trying to bring the whole process not just up to date, but into the future.
+            <p class="flow-text">
+            There are a lot of point of sales systems out there that do a lot of different things,
+            but none can provide what we provide. The term point-of-sales refers to the fact that
+            the terminal becomes the spot where sales happen for your business. But Vendor is a
+            full blown sales platform- being a point of sales system is just one of its features.
             <br/><br/>
-            -Simply walking into a bar and starting the app will determine where you're at and show you the bar's full menu. You can order anything off this menu, give a tip if you want, send a message to accompany it, and choose which counter you want to pick it up at. Get a notification as soon as your order is ready and pick it up.
-            <br/>
-            -Throw out your pile of plastic rewards cards and let the app track, earn, and automatically apply points for you.
-            <br/>
-            -Share your orders and favorite places on social media, earning more points while you do it.
-            <br/>
-            -Get vouchers tailored specifically to you by the vendors that value your business so much.
+            Vendor probably has everything you want out of your traditional POS system- menu and
+            order management, sales and financial data, employee management & restricted access,
+            support for the traditional bevy of equipment (receipt printers, cash drawers, credit/debit
+            card readers)- but where it really looks to send your business to the next level is with
+            its Patron app integration.
             <br/><br/>
-            Lots more is on the horizon for Vendor, stay tuned!
+            Patron is an app for consumers that gets you connected directly to them. Instead of relying
+            on an army of front-counter employees to manage customer money, feedback, administrate reward
+            systems and coupon promotions, why not let technology do it for you? Customers relish in
+            the time and convenience of being able to buy from right from their phone, and you save
+            costs on employees and managing a series of fragmented systems.
+            <br/><br/>
+            In addition to potentially changing the way customers purchase from your business,
+            we can offer deeper analysis of consumer purchases over than anyone else can, because we
+            can distinguish any purchase made through Patron at a personalized level. Figure out specific
+            customer needs, whether it be their addiction to your grilled cheese sandwiches being
+            doubled when you start sending them coupons for it or by discovering they stopped
+            buying sodas from you when you raised the price 25 cents.
+            <br/><br/>
+            Lots more is on the horizon for Vendor, so stay tuned!
             </p>
         <div class="divider"></div>
         </div>
@@ -53,16 +70,18 @@
         <div class="section">
             <h5>Price</h5>
             <p>Free to Download and Create Account<br/>
-            2.55% fee per card swipe<br/>
+            2.65% fee per card swipe<br/>
             3.0% + $0.30 per app-based transaction<br/>
             </p>
             <div class="divider"></div>
         </div>
         <div class="section">
             <h5>Links</h5>
+            <!--
             <a href="www.google.com">Download from App Store</a><br/>
-            <a href="www.endeal.me/products/patron-for-android/privacy-policy">Privacy Policy</a><br/>
-            <a href="www.endeal.me/products/patron-for-android/terms-of-use">Terms of Use</a>
+            -->
+            <a href="www.endeal.me/products/vendor-for-ios/privacy-policy">Privacy Policy</a><br/>
+            <a href="www.endeal.me/products/vendor-for-ios/terms-of-use">Terms of Use</a>
             <div class="divider"></div>
         </div>
         <div class="section">
