--- a/client/views/patron-for-ios.html
+++ b/client/views/patron-for-ios.html
@@ -1,6 +1,7 @@
 <template name="patron_for_ios">
     <div class="container">
         <h2>Patron for iOS</h2>
+        <!--
         <div class="slider">
             <ul class="slides">
                 <li>
@@ -17,17 +18,18 @@
                 </li>
             </ul>
         </div>
+        -->
         <div class="section">
             <h5>Description</h5>
             <p class="flow-text"> The buying and selling experience is currently spread across a variety of services, devices, and outdated technologies. We're trying to bring the whole process not just up to date, but into the future.
             <br/><br/>
-            -Simply walking into a bar and starting the app will determine where you're at and show you the bar's full menu. You can order anything off this menu, give a tip if you want, send a message to accompany it, and choose which counter you want to pick it up at. Get a notification as soon as your order is ready and pick it up.
+            &bull; Simply walk into a bar/restaurant/store/etc. and start the app to see their full menu. You can order anything off this menu, give a tip if you want, send a message to accompany it, and choose which table to serve it to or which counter to pick it up at. Get a notification as soon as your order is ready and track its progress every step of the way.
             <br/>
-            -Throw out your pile of plastic rewards cards and let the app track, earn, and automatically apply points for you.
+            &bull; Throw out your pile of plastic rewards cards and let the app track, earn, and automatically apply points for you.
             <br/>
-            -Share your orders and favorite places on social media, earning more points while you do it.
+            &bull; Share your orders and favorite places on social media, earning more points while you do it.
             <br/>
-            -Get vouchers tailored specifically to you by the vendors that value your business so much.
+            &bull; Get vouchers tailored specifically to you by the vendors that value your business so much.
             <br/><br/>
             Lots more is on the horizon for Patron, stay tuned!
             </p>
@@ -51,9 +53,11 @@
         </div>
         <div class="section">
             <h5>Links</h5>
+            <!--
             <a href="www.google.com">Download from App Store</a><br/>
-            <a href="www.endeal.me/products/patron-for-android/privacy-policy">Privacy Policy</a><br/>
-            <a href="www.endeal.me/products/patron-for-android/terms-of-use">Terms of Use</a>
+            -->
+            <a href="www.endeal.me/products/patron-for-ios/privacy-policy">Privacy Policy</a><br/>
+            <a href="www.endeal.me/products/patron-for-ios/terms-of-use">Terms of Use</a>
             <div class="divider"></div>
         </div>
         <div class="section">
