changed patron screen

--- a/client/views/patron.html
+++ b/client/views/patron.html
@@ -1,7 +1,6 @@
-<template name="patron_for_android">
+<template name="patron">
     <div class="container">
-        <h2>Patron for Android</h2>
-        <!--
+        <h2>Patron</h2>
         <div class="slider">
             <ul class="slides">
                 <li>
@@ -16,9 +15,14 @@
                 <li>
                     <img src="/images/patron-for-android-4.png"/>
                 </li>
+                <li>
+                    <img src="/images/patron-for-android-5.png"/>
+                </li>
+                <li>
+                    <img src="/images/patron-for-android-6.png"/>
+                </li>
             </ul>
         </div>
-        -->
         <div class="section">
             <h5>Description</h5>
             <p class="flow-text"> The buying and selling experience is currently spread across a variety of services, devices, and outdated technologies. We're trying to bring the whole process not just up to date, but into the future.
@@ -37,7 +41,6 @@
         </div>
         <div class="section">
             <h5>Requirements</h5>
-            <p>OS: Android 2.3.3+</p>
             <p>Credit/Debit Card to purchase from vendors</p>
             <div class="divider"></div>
         </div>
@@ -52,12 +55,20 @@
             <div class="divider"></div>
         </div>
         <div class="section">
+            <h5>Platforms</h5>
+            <p>
+            &bull; Android 2.3.3+
+            <br/>
+            &bull; iOS 6.0+ (Coming soon)
+            </p>
+            <div class="divider"></div>
+        </div>
+        <div class="section">
             <h5>Links</h5>
-            <!--
-            <a href="www.google.com">Download from Google Play</a><br/>
-            -->
-            <a href="www.endeal.me/products/patron-for-android/privacy-policy">Privacy Policy</a><br/>
-            <a href="www.endeal.me/products/patron-for-android/terms-of-use">Terms of Use</a>
+            <a href="https://play.google.com/store/apps/details?id=com.endeal.patron">Download from Google Play</a><br/>
+            <a href="www.endeal.me/products/patron/privacy-policy">Privacy Policy</a><br/>
+            <a href="www.endeal.me/products/patron/terms-of-use">Terms of Use</a>
+            <br/>
             <div class="divider"></div>
         </div>
         <div class="section">
