changed website structure, modified screenshots

--- a/client/views/patron.html
+++ b/client/views/patron.html
@@ -1,27 +1,29 @@
 <template name="patron">
     <div class="container">
         <h2>Patron</h2>
-        <div class="slider">
-            <ul class="slides">
-                <li>
-                    <img src="/images/patron-for-android-1.png"/>
-                </li>
-                <li>
-                    <img src="/images/patron-for-android-2.png"/>
-                </li>
-                <li>
-                    <img src="/images/patron-for-android-3.png"/>
-                </li>
-                <li>
-                    <img src="/images/patron-for-android-4.png"/>
-                </li>
-                <li>
-                    <img src="/images/patron-for-android-5.png"/>
-                </li>
-                <li>
-                    <img src="/images/patron-for-android-6.png"/>
-                </li>
-            </ul>
+        <div class="center appScreenshots">
+            <div class="slider center">
+                <ul class="slides center">
+                    <li>
+                        <img src="/images/patron-for-android-1.png"/>
+                    </li>
+                    <li>
+                        <img src="/images/patron-for-android-2.png"/>
+                    </li>
+                    <li>
+                        <img src="/images/patron-for-android-3.png"/>
+                    </li>
+                    <li>
+                        <img src="/images/patron-for-android-4.png"/>
+                    </li>
+                    <li>
+                        <img src="/images/patron-for-android-5.png"/>
+                    </li>
+                    <li>
+                        <img src="/images/patron-for-android-6.png"/>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="section">
             <h5>Description</h5>
@@ -81,18 +83,3 @@
         </div>
     </div>
 </template>
-
-<!--
-
-Needs:
-Name
-Screenshots
-Description
-Requirements
-Version
-Price
-Download
-Help
-Support
-
--->
