--- a/client/views/products.html
+++ b/client/views/products.html
@@ -1,36 +1,22 @@
 <template name="products">
     <div class="row container">
-        <div class="card large col s12 m4">
+        <div class="card large col s12 m5">
             <div class="card-image waves-effect waves-block waves-light">
-                <a href="/products/patron-for-android"><img src="/images/products-patron-for-android.png"></a>
+                <a href="/products/patron"><img src="/images/products-patron.png"></a>
             </div>
             <div class="card-content">
-                <span class="card-title grey-text text-darken-4"><a href="/products/patron-for-android">Patron for Android</a></span>
+                <span class="card-title grey-text text-darken-4"><a href="/products/patron">Patron</a></span>
             </div>
             <div class="card-action">
-                <!--
-                <a href="https://play.google.com/store/apps/details?id=me.endeal.patron">Download from Google Play</a>
-                -->
-                <a href="#">Not yet available</a>
+                <a href="https://play.google.com/store/apps/details?id=com.endeal.patron">Download from Google Play</a>
             </div>
         </div>
-        <div class="card large col s12 m4">
+        <div class="card large col s12 m5 offset-m2">
             <div class="card-image waves-effect waves-block waves-light">
-                <a href="/products/patron-for-ios"><img src="/images/products-patron-for-ios.png"></a>
+                <a href="/products/vendor"><img src="/images/products-vendor.png"></a>
             </div>
             <div class="card-content">
-                <span class="card-title grey-text text-darken-4"><a href="/products/patron-for-ios">Patron for iOS</a></span>
-            </div>
-            <div class="card-action">
-                <a href="#">Not yet available</a>
-            </div>
-        </div>
-        <div class="card large col s12 m4">
-            <div class="card-image waves-effect waves-block waves-light">
-                <a href="/products/vendor-for-ios"><img src="/images/products-vendor-for-ios.png"></a>
-            </div>
-            <div class="card-content">
-                <span class="card-title grey-text text-darken-4"><a href="/products/vendor-for-ios">Vendor for iOS</a></span>
+                <span class="card-title grey-text text-darken-4"><a href="/products/vendor">Vendor</a></span>
             </div>
             <div class="card-action">
                 <a href="#">Not yet available</a>
