--- a/endeal.styl
+++ b/endeal.styl
@@ -16,3 +16,9 @@ img
         margin-right 15px
     &.screenshot
         max-width 400px
+
+.appScreenshots
+    width 253px
+
+.center
+    margin auto
