--- a/client/views/connect.html
+++ b/client/views/connect.html
@@ -7,39 +7,14 @@
                 <h5>Endeal</h5>
                 <p>Updates about the company itself.</p>
             </li>
-            <a href="http://www.blogger.com" class="collection-item">Blogger- we use this as our official company blog</a>
-            <a href="http://www.facebook.com" class="collection-item">Facebook</a>
-            <a href="http://www.twitter.com" class="collection-item">Twitter</a>
-            <a href="http://www.plus.google.com" class="collection-item">Google+</a>
-            <a href="http://www.youtube.com" class="collection-item">Youtube</a>
-            <a href="http://www.instagram.com" class="collection-item">Instagram</a>
+            <a target="_blank" href="http://endeal.blogspot.com" class="collection-item">Blogger</a>
+            <a target="_blank" href="https://www.facebook.com/pages/Endeal/667407976722263" class="collection-item">Facebook</a>
+            <a target="_blank" href="http://www.twitter.com/TheEndeal" class="collection-item">Twitter</a>
+            <a target="_blank" href="https://plus.google.com/b/118162879377821909893/118162879377821909893" class="collection-item">Google+</a>
+            <a target="_blank" href="http://www.youtube.com/channel/UCNQrXa_tEbMgTdqy3u3-42w" class="collection-item">Youtube</a>
+            <a target="_blank" href="http://www.instagram.com/theendeal" class="collection-item">Instagram</a>
             <li class="collection-item">E-mail (for all business concerns): <a href="mailto:admin@endeal.me">admin@endeal.me</a></li>
             <li class="collection-item">Mailing Address: 1480 Olympic Street, Simi Valley, CA 93063</li>
-        </ul>
-        <ul class="collection with-header">
-            <li class="collection-header">
-                <h5>Patron</h5>
-                <p>Updates about the Patron app, platform-agnostic.</p>
-            </li>
-            <a href="http://www.facebook.com" class="collection-item">Facebook</a>
-            <a href="http://www.twitter.com" class="collection-item">Twitter</a>
-            <a href="http://www.plus.google.com" class="collection-item">Google+</a>
-            <a href="http://www.youtube.com" class="collection-item">Youtube</a>
-            <a href="http://www.instagram.com" class="collection-item">Instagram</a>
-            <li class="collection-item">E-mail (support for all Patron app users): <a href="mailto:admin@endeal.me">admin@endeal.me</a></li>
-        </ul>
-        <ul class="collection with-header">
-            <li class="collection-header">
-                <h5>Vendor</h5>
-                <p>Updates about the Vendor app, platform-agnostic.</p>
-            </li>
-            <a href="http://www.facebook.com" class="collection-item">Facebook</a>
-            <a href="http://www.twitter.com" class="collection-item">Twitter</a>
-            <a href="http://www.plus.google.com" class="collection-item">Google+</a>
-            <a href="http://www.youtube.com" class="collection-item">Youtube</a>
-            <a href="http://www.instagram.com" class="collection-item">Instagram</a>
-            <li class="collection-item">Email (support for all Vendor app users): <a href="mailto:admin@endeal.me">admin@endeal.me</a></li>
-            <li class="collection-item">Phone (support for all Vendor app users): <a href="mailto:admin@endeal.me">admin@endeal.me</a></li>
         </ul>
     </div>
 </template>
