--- a/client/views/vendor.html
+++ b/client/views/vendor.html
@@ -1,6 +1,6 @@
-<template name="vendor_for_ios">
+<template name="vendor">
     <div class="container">
-        <h2>Vendor for iOS</h2>
+        <h2>Vendor</h2>
         <!--
         <div class="slider">
             <ul class="slides">
@@ -52,7 +52,6 @@
         </div>
         <div class="section">
             <h5>Requirements</h5>
-            <p>OS: iOS 6.0+</p>
             <p>Bank account to receive payment<br/>
             Optional QR Code scanner to allow for customer validation<br/>
             Optional Powered USB Hub with 5+ ports to support attachments<br/>
@@ -76,12 +75,19 @@
             <div class="divider"></div>
         </div>
         <div class="section">
+            <h5>Platforms</h5>
+            <p>
+            &bull; iOS 6.0+ (Coming soon)
+            </p>
+            <div class="divider"></div>
+        </div>
+        <div class="section">
             <h5>Links</h5>
             <!--
             <a href="www.google.com">Download from App Store</a><br/>
             -->
-            <a href="www.endeal.me/products/vendor-for-ios/privacy-policy">Privacy Policy</a><br/>
-            <a href="www.endeal.me/products/vendor-for-ios/terms-of-use">Terms of Use</a>
+            <a href="www.endeal.me/products/vendor/privacy-policy">Privacy Policy</a><br/>
+            <a href="www.endeal.me/products/vendor/terms-of-use">Terms of Use</a>
             <div class="divider"></div>
         </div>
         <div class="section">
@@ -96,16 +102,14 @@
         </div>
     </div>
 </template>
+
 <!--
+    Vendor app, need to sell it here:
 
-Needs:
-Name
-Screenshots
-Requirements
-Version
-Price
-Download
-Help
-Support
+    Features
+    Hardware
+    Media
+    Price
+    Get
 
--->
+    -->
