--- a/client/views/patron.html
+++ b/client/views/patron.html
@@ -1,85 +1,79 @@
 <template name="patron">
     <div class="container">
         <h2>Patron</h2>
-        <div class="center appScreenshots">
-            <div class="slider center">
+        <div class="center">
+            <div class="slider center appScreenshots">
                 <ul class="slides center">
                     <li>
-                        <img src="/images/patron-for-android-1.png"/>
+                        <img src="/images/patron-1.png"/>
                     </li>
                     <li>
-                        <img src="/images/patron-for-android-2.png"/>
+                        <img src="/images/patron-2.png"/>
                     </li>
                     <li>
-                        <img src="/images/patron-for-android-3.png"/>
+                        <img src="/images/patron-3.png"/>
                     </li>
                     <li>
-                        <img src="/images/patron-for-android-4.png"/>
-                    </li>
-                    <li>
-                        <img src="/images/patron-for-android-5.png"/>
-                    </li>
-                    <li>
-                        <img src="/images/patron-for-android-6.png"/>
+                        <img src="/images/patron-4.png"/>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="section">
-            <h5>Description</h5>
-            <p class="flow-text"> The buying and selling experience is currently spread across a variety of services, devices, and outdated technologies. We're trying to bring the whole process not just up to date, but into the future.
-            <br/><br/>
-            &bull; Simply walk into a bar/restaurant/store/etc. and start the app to see their full menu. You can order anything off this menu, give a tip if you want, send a message to accompany it, and choose which table to serve it to or which counter to pick it up at. Get a notification as soon as your order is ready and track its progress every step of the way.
-            <br/>
-            &bull; Throw out your pile of plastic rewards cards and let the app track, earn, and automatically apply points for you.
-            <br/>
-            &bull; Share your orders and favorite places on social media, earning more points while you do it.
-            <br/>
-            &bull; Get vouchers tailored specifically to you by the vendors that value your business so much.
-            <br/><br/>
-            Lots more is on the horizon for Patron, stay tuned!
+            <h4>Description</h4>
+            <p class="flow-text"> 
+            Patron is your universal waitress- just walk into your favorite restaurant,
+            bar, or store, open the app, and buy anything off the menu, totally bypassing 
+            any front counter employees, bartenders, or waitresses. 
+            Get it delivered to the table you're sitting at, take it to go, or get 
+            it delivered right to your home. You can give tips, send a comment with 
+            your order, give direct feedback to the vendor, earn vouchers targeted to 
+            your tastes, keep track of reward points, and share your favorite places 
+            and items on social media.
             </p>
         <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>Requirements</h5>
-            <p>Credit/Debit Card to purchase from vendors</p>
+            <h4>Requirements</h4>
+            <p class="flow-text">Credit/Debit Card to purchase from vendors</p>
             <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>Version</h5>
-            <p>1</p>
+            <h4>Version</h4>
+            <p class="flow-text">1</p>
             <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>Price</h5>
-            <p>Free</p>
+            <h4>Price</h4>
+            <p class="flow-text">Free</p>
             <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>Platforms</h5>
-            <p>
+            <h4>Platforms</h4>
+            <p class="flow-text">
             &bull; Android 2.3.3+
             <br/>
-            &bull; iOS 6.0+ (Coming soon)
+            &bull; iOS 7.0+
             </p>
             <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>Links</h5>
+            <h4>Links</h4>
+            <p class="flow-text">
             <a href="https://play.google.com/store/apps/details?id=com.endeal.patron">Download from Google Play</a><br/>
-            <a href="www.endeal.me/products/patron/privacy-policy">Privacy Policy</a><br/>
-            <a href="www.endeal.me/products/patron/terms-of-use">Terms of Use</a>
+            <a href="/privacy-policy">Privacy Policy</a><br/>
+            <a href="/terms-of-service">Terms of Service</a>
+            </p>
             <br/>
             <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>Support</h5>
-            <p>E-mail <a href="mailto:admin@endeal.me">admin@endeal.me</a> if you're having any support issues.</p>
+            <h4>Support</h4>
+            <p class="flow-text">E-mail <a href="mailto:admin@endeal.me">admin@endeal.me</a> if you're having any support issues.</p>
             <div class="divider"></div>
         </div>
         <div class="section">
-            <h5>FAQ</h5>
+            <h4>FAQ</h4>
         </div>
     </div>
 </template>
