--- a/endeal.styl
+++ b/endeal.styl
@@ -18,7 +18,8 @@ img
         max-width 400px
 
 .appScreenshots
-    width 253px
+    max-width 1000px
+    height 563px
 
 .center
     margin auto
